# repowerd

./: CMakeLists.txt  Jenkinsfile
data/: CMakeLists.txt  repowerd.service
data/dbus-configs/: com.canonical.Unity.Screen.conf  com.canonical.powerd.conf  com.canonical.repowerd.conf
data/device-configs/: config-default.xml  config-grouper.xml  config-maguro.xml  config-mako.xml  config-manta.xml
src/: CMakeLists.txt  brightness_control.h  client_requests.h  daemon.cpp  daemon.h  daemon_config.h  default_daemon_config.cpp  default_daemon_config.h  default_state_machine.cpp  default_state_machine.h  display_power_control.h  handler_registration.cpp  handler_registration.h  main.cpp  notification_service.h  power_button.h  proximity_sensor.h  state_machine.h  timer.h  user_activity.h
src/adapters/: CMakeLists.txt  android_autobrightness_algorithm.cpp  android_autobrightness_algorithm.h  android_backlight.cpp  android_backlight.h  android_device_config.cpp  android_device_config.h  android_device_quirks.cpp  android_device_quirks.h  autobrightness_algorithm.h  backlight.h  backlight_brightness_control.cpp  backlight_brightness_control.h  brightness_notification.h  brightness_params.cpp  brightness_params.h  chrono.h  console_log.cpp  console_log.h  dbus_connection_handle.cpp  dbus_connection_handle.h  dbus_event_loop.cpp  dbus_event_loop.h  dbus_message_handle.cpp  dbus_message_handle.h  default_state_machine_options.cpp  default_state_machine_options.h  dev_alarm_wakeup_service.cpp  dev_alarm_wakeup_service.h  device_config.h  device_quirks.h  event_loop.cpp  event_loop.h  event_loop_handler_registration.h  event_loop_timer.cpp  event_loop_timer.h  fd.cpp  fd.h  filesystem.h  libsuspend_suspend_control.cpp  (+63 more)
src/core/: CMakeLists.txt  alarm_id.h  brightness_control.h  client_requests.h  client_settings.h  daemon.cpp  daemon.h  daemon_config.h  default_state_machine.cpp  default_state_machine.h  default_state_machine_factory.cpp  default_state_machine_factory.h  display_information.h  display_power_change_reason.h  display_power_control.h  display_power_event_sink.h  handler_registration.cpp  handler_registration.h  infinite_timeout.h  lid.h  log.h  modem_power_control.h  notification_service.h  null_state_machine.h  performance_booster.h  power_action.h  power_button.h  power_button_event_sink.h  power_source.h  power_supply.h  proximity_sensor.h  session_tracker.h  shutdown_control.h  state_event_adapter.cpp  state_event_adapter.h  state_machine.h  state_machine_factory.h  state_machine_options.h  suspend_control.h  system_power_control.h  (+3 more)
src/tools/: CMakeLists.txt  brightness_tool.cpp  cli.cpp  light_tool.cpp  power_source_tool.cpp  proximity_tool.cpp  session_tool.cpp  wakeup_tool.cpp
tests/acceptance-tests/: CMakeLists.txt  acceptance_test.cpp  acceptance_test.h  daemon_config.cpp  daemon_config.h  fake_power_button.cpp  fake_power_button.h  test_client_requests.cpp  test_notification.cpp  test_power_button.cpp  test_power_source.cpp  test_proximity_sensor.cpp  test_suspend_control.cpp  test_turn_on_display_at_startup.cpp  test_user_activity.cpp  test_voice_call.cpp
tests/adapter-tests/: CMakeLists.txt  current_thread_name.cpp  current_thread_name.h  dbus_bus.h  dbus_client.cpp  duration_of.h  fake_brightness_notification.h  fake_chrono.cpp  fake_chrono.h  fake_device_config.cpp  fake_device_config.h  fake_device_quirks.cpp  fake_device_quirks.h  fake_filesystem.cpp  fake_filesystem.h  fake_libhardware.cpp  fake_libhardware.h  fake_logind.cpp  fake_logind.h  fake_upower.cpp  fake_upower.h  fake_wakeup_service.cpp  fake_wakeup_service.h  repowerd_dbus_client.cpp  repowerd_dbus_client.h  temporary_environment_value.h  temporary_file.cpp  test_android_autobrightness_algorithm.cpp  test_android_backlight.cpp  test_android_device_config.cpp  test_android_device_quirks.cpp  test_backlight_brightness_control.cpp  test_brightness_params.cpp  test_dbus_event_loop.cpp  test_default_state_machine_options.cpp  test_dev_alarm_wakeup_service.cpp  test_event_loop.cpp  test_fd.cpp  test_in_separate_process.h  test_logind_session_tracker.cpp  (+16 more)
tests/common/: CMakeLists.txt  daemon_config.cpp  daemon_config.h  fake_client_requests.cpp  fake_client_requests.h  fake_log.cpp  fake_log.h  fake_notification_service.cpp  fake_notification_service.h  fake_power_button.cpp  fake_power_button.h  fake_power_source.cpp  fake_power_source.h  fake_proximity_sensor.cpp  fake_proximity_sensor.h  fake_shared.h  fake_suspend_control.cpp  fake_suspend_control.h  fake_system_power_control.cpp  fake_system_power_control.h  fake_timer.cpp  fake_timer.h  fake_user_activity.cpp  fake_user_activity.h  fake_voice_call_service.cpp  fake_voice_call_service.h  mock_brightness_control.h  mock_display_power_control.h  mock_power_button_event_sink.h  mock_shutdown_control.h  spin_wait.cpp  spin_wait.h  wait_condition.h
tests/core-tests/: CMakeLists.txt  acceptance_test.cpp  acceptance_test.h  daemon_config.cpp  daemon_config.h  default_pid.h  fake_client_requests.cpp  fake_client_requests.h  fake_client_settings.cpp  fake_client_settings.h  fake_display_information.cpp  fake_display_information.h  fake_lid.cpp  fake_lid.h  fake_notification_service.cpp  fake_notification_service.h  fake_power_source.cpp  fake_power_source.h  fake_proximity_sensor.cpp  fake_proximity_sensor.h  fake_session_tracker.cpp  fake_session_tracker.h  fake_state_machine_options.cpp  fake_state_machine_options.h  fake_timer.cpp  fake_timer.h  fake_user_activity.cpp  fake_user_activity.h  fake_voice_call_service.cpp  fake_voice_call_service.h  mock_brightness_control.h  mock_display_power_control.h  mock_display_power_event_sink.h  mock_modem_power_control.h  mock_performance_booster.h  mock_power_button_event_sink.h  run_daemon.cpp  run_daemon.h  test_client_requests.cpp  test_client_settings.cpp  (+14 more)
tests/integration-tests/: CMakeLists.txt  dbus_bus.cpp  dbus_client.cpp  dbus_client.h  fake_android_properties.cpp  fake_android_properties.h  fake_brightness_notification.cpp  fake_device_config.cpp  fake_device_config.h  fake_ofono.cpp  (+32 more)
(+39 files in other folders)
